parser.output
   0  $accept : %entry% $end

   1  program : defns EOF

   2  defns :
   3        | defns fdefn
   4        | defns cdefn
   5        | defns edefn
   6        | defns stmt

   7  fdefn : FUNC ID LPAREN args_opt RPAREN ARROW typ LBRACE stmt_list RBRACE

   8  cdefn : CLASS ID LBRACE fields_opt init_list methods_opt RBRACE

   9  edefn : ENUM ID LBRACE case_list RBRACE

  10  args_opt :
  11           | args_list

  12  args_list : ID COLON typ
  13            | args_list COMMA ID COLON typ

  14  fields_opt :
  15             | fields_list

  16  fields_list : VAR ID COLON typ assign_opt SEMI
  17              | fields_list VAR ID COLON typ assign_opt SEMI

  18  assign_opt :
  19             | ASSIGN expr

  20  init_list : INIT LPAREN args_opt RPAREN LBRACE stmt_list RBRACE
  21            | init_list INIT LPAREN args_opt RPAREN LBRACE stmt_list RBRACE

  22  methods_opt :
  23              | methods_list

  24  methods_list : fdefn
  25               | methods_list fdefn

  26  case_list : CASE ID SEMI
  27            | case_list CASE ID SEMI

  28  typ : INT
  29      | BOOL
  30      | FLOAT
  31      | CHAR
  32      | STRING
  33      | typ OPTIONAL
  34      | ID
  35      | LBRACKET typ RBRACKET

  36  stmt_list :
  37            | stmt_list stmt

  38  stmt : expr SEMI
  39       | VAR ID COLON typ ASSIGN expr SEMI
  40       | LET ID COLON typ ASSIGN expr SEMI
  41       | RETURN expr_opt SEMI
  42       | IF expr LBRACE stmt_list RBRACE
  43       | IF expr LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
  44       | IF LET ID COLON typ ASSIGN expr LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
  45       | WHILE expr LBRACE stmt_list RBRACE
  46       | FOR ID IN expr LBRACE stmt_list RBRACE

  47  expr_opt :
  48           | expr

  49  expr_list_opt :
  50                | expr_list

  51  expr_list : expr
  52            | expr_list COMMA expr

  53  literal : BOOLLIT
  54          | STRINGLIT
  55          | CHARLIT
  56          | INTLIT
  57          | FLOATLIT
  58          | LBRACKET lit_opt RBRACKET
  59          | NIL

  60  lit_opt :
  61          | lit_list

  62  lit_list : literal
  63           | lit_list COMMA literal

  64  expr : literal
  65       | ID
  66       | expr PLUS expr
  67       | expr MINUS expr
  68       | expr TIMES expr
  69       | expr DIVIDE expr
  70       | expr MOD expr
  71       | expr EQ expr
  72       | expr NEQ expr
  73       | expr LT expr
  74       | expr LEQ expr
  75       | expr GT expr
  76       | expr GEQ expr
  77       | expr AND expr
  78       | expr OR expr
  79       | expr ORANGE expr
  80       | expr CRANGE expr
  81       | MINUS expr
  82       | NOT expr
  83       | ID ASSIGN expr
  84       | ID LBRACKET expr RBRACKET
  85       | ID LBRACKET expr RBRACKET ASSIGN expr
  86       | ID LPAREN expr_list_opt RPAREN
  87       | ID DOT ID LPAREN expr_list_opt RPAREN
  88       | ID DOT ID

  89  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (89)
	defns : .  (2)

	.  reduce 2

	program  goto 3
	defns  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (89)

	.  reduce 89


state 4
	program : defns . EOF  (1)
	defns : defns . fdefn  (3)
	defns : defns . cdefn  (4)
	defns : defns . edefn  (5)
	defns : defns . stmt  (6)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	LET  shift 8
	VAR  shift 9
	IF  shift 10
	FOR  shift 11
	WHILE  shift 12
	RETURN  shift 13
	NIL  shift 14
	CLASS  shift 15
	FUNC  shift 16
	ENUM  shift 17
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	EOF  shift 24
	.  error

	fdefn  goto 25
	cdefn  goto 26
	edefn  goto 27
	stmt  goto 28
	expr  goto 29
	literal  goto 30


state 5
	literal : LBRACKET . lit_opt RBRACKET  (58)
	lit_opt : .  (60)

	LBRACKET  shift 5
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	RBRACKET  reduce 60

	literal  goto 31
	lit_opt  goto 32
	lit_list  goto 33


state 6
	expr : MINUS . expr  (81)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 34
	literal  goto 30


state 7
	expr : NOT . expr  (82)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 35
	literal  goto 30


state 8
	stmt : LET . ID COLON typ ASSIGN expr SEMI  (40)

	ID  shift 36
	.  error


state 9
	stmt : VAR . ID COLON typ ASSIGN expr SEMI  (39)

	ID  shift 37
	.  error


state 10
	stmt : IF . expr LBRACE stmt_list RBRACE  (42)
	stmt : IF . expr LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE  (43)
	stmt : IF . LET ID COLON typ ASSIGN expr LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE  (44)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	LET  shift 38
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 39
	literal  goto 30


state 11
	stmt : FOR . ID IN expr LBRACE stmt_list RBRACE  (46)

	ID  shift 40
	.  error


state 12
	stmt : WHILE . expr LBRACE stmt_list RBRACE  (45)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 41
	literal  goto 30


state 13
	stmt : RETURN . expr_opt SEMI  (41)
	expr_opt : .  (47)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	SEMI  reduce 47

	expr  goto 42
	expr_opt  goto 43
	literal  goto 30


state 14
	literal : NIL .  (59)

	.  reduce 59


state 15
	cdefn : CLASS . ID LBRACE fields_opt init_list methods_opt RBRACE  (8)

	ID  shift 44
	.  error


state 16
	fdefn : FUNC . ID LPAREN args_opt RPAREN ARROW typ LBRACE stmt_list RBRACE  (7)

	ID  shift 45
	.  error


state 17
	edefn : ENUM . ID LBRACE case_list RBRACE  (9)

	ID  shift 46
	.  error


state 18
	literal : BOOLLIT .  (53)

	.  reduce 53


state 19
	literal : INTLIT .  (56)

	.  reduce 56


state 20
	literal : CHARLIT .  (55)

	.  reduce 55


state 21
	literal : FLOATLIT .  (57)

	.  reduce 57


state 22
	literal : STRINGLIT .  (54)

	.  reduce 54


state 23
	expr : ID .  (65)
	expr : ID . ASSIGN expr  (83)
	expr : ID . LBRACKET expr RBRACKET  (84)
	expr : ID . LBRACKET expr RBRACKET ASSIGN expr  (85)
	expr : ID . LPAREN expr_list_opt RPAREN  (86)
	expr : ID . DOT ID LPAREN expr_list_opt RPAREN  (87)
	expr : ID . DOT ID  (88)

	LPAREN  shift 47
	LBRACKET  shift 48
	ASSIGN  shift 49
	DOT  shift 50
	RPAREN  reduce 65
	LBRACE  reduce 65
	RBRACKET  reduce 65
	COMMA  reduce 65
	SEMI  reduce 65
	PLUS  reduce 65
	MINUS  reduce 65
	TIMES  reduce 65
	DIVIDE  reduce 65
	MOD  reduce 65
	EQ  reduce 65
	NEQ  reduce 65
	LT  reduce 65
	LEQ  reduce 65
	GT  reduce 65
	GEQ  reduce 65
	AND  reduce 65
	OR  reduce 65
	ORANGE  reduce 65
	CRANGE  reduce 65


state 24
	program : defns EOF .  (1)

	.  reduce 1


state 25
	defns : defns fdefn .  (3)

	.  reduce 3


state 26
	defns : defns cdefn .  (4)

	.  reduce 4


state 27
	defns : defns edefn .  (5)

	.  reduce 5


state 28
	defns : defns stmt .  (6)

	.  reduce 6


state 29
	stmt : expr . SEMI  (38)
	expr : expr . PLUS expr  (66)
	expr : expr . MINUS expr  (67)
	expr : expr . TIMES expr  (68)
	expr : expr . DIVIDE expr  (69)
	expr : expr . MOD expr  (70)
	expr : expr . EQ expr  (71)
	expr : expr . NEQ expr  (72)
	expr : expr . LT expr  (73)
	expr : expr . LEQ expr  (74)
	expr : expr . GT expr  (75)
	expr : expr . GEQ expr  (76)
	expr : expr . AND expr  (77)
	expr : expr . OR expr  (78)
	expr : expr . ORANGE expr  (79)
	expr : expr . CRANGE expr  (80)

	SEMI  shift 51
	PLUS  shift 52
	MINUS  shift 53
	TIMES  shift 54
	DIVIDE  shift 55
	MOD  shift 56
	EQ  shift 57
	NEQ  shift 58
	LT  shift 59
	LEQ  shift 60
	GT  shift 61
	GEQ  shift 62
	AND  shift 63
	OR  shift 64
	ORANGE  shift 65
	CRANGE  shift 66
	.  error


state 30
	expr : literal .  (64)

	.  reduce 64


state 31
	lit_list : literal .  (62)

	.  reduce 62


state 32
	literal : LBRACKET lit_opt . RBRACKET  (58)

	RBRACKET  shift 67
	.  error


state 33
	lit_opt : lit_list .  (61)
	lit_list : lit_list . COMMA literal  (63)

	COMMA  shift 68
	RBRACKET  reduce 61


state 34
	expr : expr . PLUS expr  (66)
	expr : expr . MINUS expr  (67)
	expr : expr . TIMES expr  (68)
	expr : expr . DIVIDE expr  (69)
	expr : expr . MOD expr  (70)
	expr : expr . EQ expr  (71)
	expr : expr . NEQ expr  (72)
	expr : expr . LT expr  (73)
	expr : expr . LEQ expr  (74)
	expr : expr . GT expr  (75)
	expr : expr . GEQ expr  (76)
	expr : expr . AND expr  (77)
	expr : expr . OR expr  (78)
	expr : expr . ORANGE expr  (79)
	expr : expr . CRANGE expr  (80)
	expr : MINUS expr .  (81)

	.  reduce 81


state 35
	expr : expr . PLUS expr  (66)
	expr : expr . MINUS expr  (67)
	expr : expr . TIMES expr  (68)
	expr : expr . DIVIDE expr  (69)
	expr : expr . MOD expr  (70)
	expr : expr . EQ expr  (71)
	expr : expr . NEQ expr  (72)
	expr : expr . LT expr  (73)
	expr : expr . LEQ expr  (74)
	expr : expr . GT expr  (75)
	expr : expr . GEQ expr  (76)
	expr : expr . AND expr  (77)
	expr : expr . OR expr  (78)
	expr : expr . ORANGE expr  (79)
	expr : expr . CRANGE expr  (80)
	expr : NOT expr .  (82)

	.  reduce 82


state 36
	stmt : LET ID . COLON typ ASSIGN expr SEMI  (40)

	COLON  shift 69
	.  error


state 37
	stmt : VAR ID . COLON typ ASSIGN expr SEMI  (39)

	COLON  shift 70
	.  error


state 38
	stmt : IF LET . ID COLON typ ASSIGN expr LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE  (44)

	ID  shift 71
	.  error


state 39
	stmt : IF expr . LBRACE stmt_list RBRACE  (42)
	stmt : IF expr . LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE  (43)
	expr : expr . PLUS expr  (66)
	expr : expr . MINUS expr  (67)
	expr : expr . TIMES expr  (68)
	expr : expr . DIVIDE expr  (69)
	expr : expr . MOD expr  (70)
	expr : expr . EQ expr  (71)
	expr : expr . NEQ expr  (72)
	expr : expr . LT expr  (73)
	expr : expr . LEQ expr  (74)
	expr : expr . GT expr  (75)
	expr : expr . GEQ expr  (76)
	expr : expr . AND expr  (77)
	expr : expr . OR expr  (78)
	expr : expr . ORANGE expr  (79)
	expr : expr . CRANGE expr  (80)

	LBRACE  shift 72
	PLUS  shift 52
	MINUS  shift 53
	TIMES  shift 54
	DIVIDE  shift 55
	MOD  shift 56
	EQ  shift 57
	NEQ  shift 58
	LT  shift 59
	LEQ  shift 60
	GT  shift 61
	GEQ  shift 62
	AND  shift 63
	OR  shift 64
	ORANGE  shift 65
	CRANGE  shift 66
	.  error


state 40
	stmt : FOR ID . IN expr LBRACE stmt_list RBRACE  (46)

	IN  shift 73
	.  error


state 41
	stmt : WHILE expr . LBRACE stmt_list RBRACE  (45)
	expr : expr . PLUS expr  (66)
	expr : expr . MINUS expr  (67)
	expr : expr . TIMES expr  (68)
	expr : expr . DIVIDE expr  (69)
	expr : expr . MOD expr  (70)
	expr : expr . EQ expr  (71)
	expr : expr . NEQ expr  (72)
	expr : expr . LT expr  (73)
	expr : expr . LEQ expr  (74)
	expr : expr . GT expr  (75)
	expr : expr . GEQ expr  (76)
	expr : expr . AND expr  (77)
	expr : expr . OR expr  (78)
	expr : expr . ORANGE expr  (79)
	expr : expr . CRANGE expr  (80)

	LBRACE  shift 74
	PLUS  shift 52
	MINUS  shift 53
	TIMES  shift 54
	DIVIDE  shift 55
	MOD  shift 56
	EQ  shift 57
	NEQ  shift 58
	LT  shift 59
	LEQ  shift 60
	GT  shift 61
	GEQ  shift 62
	AND  shift 63
	OR  shift 64
	ORANGE  shift 65
	CRANGE  shift 66
	.  error


state 42
	expr_opt : expr .  (48)
	expr : expr . PLUS expr  (66)
	expr : expr . MINUS expr  (67)
	expr : expr . TIMES expr  (68)
	expr : expr . DIVIDE expr  (69)
	expr : expr . MOD expr  (70)
	expr : expr . EQ expr  (71)
	expr : expr . NEQ expr  (72)
	expr : expr . LT expr  (73)
	expr : expr . LEQ expr  (74)
	expr : expr . GT expr  (75)
	expr : expr . GEQ expr  (76)
	expr : expr . AND expr  (77)
	expr : expr . OR expr  (78)
	expr : expr . ORANGE expr  (79)
	expr : expr . CRANGE expr  (80)

	PLUS  shift 52
	MINUS  shift 53
	TIMES  shift 54
	DIVIDE  shift 55
	MOD  shift 56
	EQ  shift 57
	NEQ  shift 58
	LT  shift 59
	LEQ  shift 60
	GT  shift 61
	GEQ  shift 62
	AND  shift 63
	OR  shift 64
	ORANGE  shift 65
	CRANGE  shift 66
	SEMI  reduce 48


state 43
	stmt : RETURN expr_opt . SEMI  (41)

	SEMI  shift 75
	.  error


state 44
	cdefn : CLASS ID . LBRACE fields_opt init_list methods_opt RBRACE  (8)

	LBRACE  shift 76
	.  error


state 45
	fdefn : FUNC ID . LPAREN args_opt RPAREN ARROW typ LBRACE stmt_list RBRACE  (7)

	LPAREN  shift 77
	.  error


state 46
	edefn : ENUM ID . LBRACE case_list RBRACE  (9)

	LBRACE  shift 78
	.  error


state 47
	expr : ID LPAREN . expr_list_opt RPAREN  (86)
	expr_list_opt : .  (49)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	RPAREN  reduce 49

	expr  goto 79
	expr_list_opt  goto 80
	expr_list  goto 81
	literal  goto 30


state 48
	expr : ID LBRACKET . expr RBRACKET  (84)
	expr : ID LBRACKET . expr RBRACKET ASSIGN expr  (85)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 82
	literal  goto 30


state 49
	expr : ID ASSIGN . expr  (83)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 83
	literal  goto 30


state 50
	expr : ID DOT . ID LPAREN expr_list_opt RPAREN  (87)
	expr : ID DOT . ID  (88)

	ID  shift 84
	.  error


state 51
	stmt : expr SEMI .  (38)

	.  reduce 38


state 52
	expr : expr PLUS . expr  (66)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 85
	literal  goto 30


state 53
	expr : expr MINUS . expr  (67)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 86
	literal  goto 30


state 54
	expr : expr TIMES . expr  (68)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 87
	literal  goto 30


state 55
	expr : expr DIVIDE . expr  (69)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 88
	literal  goto 30


state 56
	expr : expr MOD . expr  (70)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 89
	literal  goto 30


state 57
	expr : expr EQ . expr  (71)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 90
	literal  goto 30


state 58
	expr : expr NEQ . expr  (72)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 91
	literal  goto 30


state 59
	expr : expr LT . expr  (73)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 92
	literal  goto 30


state 60
	expr : expr LEQ . expr  (74)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 93
	literal  goto 30


state 61
	expr : expr GT . expr  (75)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 94
	literal  goto 30


state 62
	expr : expr GEQ . expr  (76)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 95
	literal  goto 30


state 63
	expr : expr AND . expr  (77)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 96
	literal  goto 30


state 64
	expr : expr OR . expr  (78)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 97
	literal  goto 30


state 65
	expr : expr ORANGE . expr  (79)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 98
	literal  goto 30


state 66
	expr : expr CRANGE . expr  (80)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 99
	literal  goto 30


state 67
	literal : LBRACKET lit_opt RBRACKET .  (58)

	.  reduce 58


state 68
	lit_list : lit_list COMMA . literal  (63)

	LBRACKET  shift 5
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	.  error

	literal  goto 100


state 69
	stmt : LET ID COLON . typ ASSIGN expr SEMI  (40)

	LBRACKET  shift 101
	INT  shift 102
	FLOAT  shift 103
	CHAR  shift 104
	STRING  shift 105
	BOOL  shift 106
	ID  shift 107
	.  error

	typ  goto 108


state 70
	stmt : VAR ID COLON . typ ASSIGN expr SEMI  (39)

	LBRACKET  shift 101
	INT  shift 102
	FLOAT  shift 103
	CHAR  shift 104
	STRING  shift 105
	BOOL  shift 106
	ID  shift 107
	.  error

	typ  goto 109


state 71
	stmt : IF LET ID . COLON typ ASSIGN expr LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE  (44)

	COLON  shift 110
	.  error


state 72
	stmt : IF expr LBRACE . stmt_list RBRACE  (42)
	stmt : IF expr LBRACE . stmt_list RBRACE ELSE LBRACE stmt_list RBRACE  (43)
	stmt_list : .  (36)

	.  reduce 36

	stmt_list  goto 111


state 73
	stmt : FOR ID IN . expr LBRACE stmt_list RBRACE  (46)

	LBRACKET  shift 5
	MINUS  shift 6
	NOT  shift 7
	NIL  shift 14
	BOOLLIT  shift 18
	INTLIT  shift 19
	CHARLIT  shift 20
	FLOATLIT  shift 21
	STRINGLIT  shift 22
	ID  shift 23
	.  error

	expr  goto 112
	literal  goto 30


state 74
	stmt : WHILE expr LBRACE . stmt_list RBRACE  (45)
	stmt_list : .  (36)

	.  reduce 36

	stmt_list  goto 113


state 75
	stmt : RETURN expr_opt SEMI .  (41)

	.  reduce 41

